<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="sc_content_provider_authority">com.soundcloud.android.provider.ScContentProvider</string>
  <string name="this_user">this user</string>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">New Updates</string>
  <string name="error_making_connection_title">Network error</string>
  <string name="error_making_connection_message">There was a problem contacting Soundcloud. Please make sure you have a working data connection.</string>
  <string name="error_loading_title">Network error</string>
  <string name="error_loading_message">There was a problem contacting Soundcloud.</string>
  <string name="incoming_updating_message">Getting your latest incoming tracks.</string>
  <string name="exclusive_updating_message">Getting your latest exclusive tracks.</string>
  <string name="error_updating_incoming">Error updating your incoming tracks.</string>
  <string name="error_updating_exclusive">Error updating your exclusive tracks.</string>
  <string name="dashboard_notifications_ticker_single">1 new sound</string>
  <string name="dashboard_notifications_title_single">1 new sound</string>
  <string name="dashboard_notifications_ticker">%s new sounds</string>
  <string name="dashboard_notifications_title">%s new sounds</string>
  <string name="dashboard_notifications_message_single_exclusive">1 exclusive from %s</string>
  <string name="dashboard_notifications_message_exclusive">exclusives from %s</string>
  <string name="dashboard_notifications_message_exclusive_2">exclusives from %1$s and %2$s</string>
  <string name="dashboard_notifications_message_exclusive_others">exclusives from %1$s, %2$s and others</string>
  <string name="dashboard_notifications_message_incoming">from %s</string>
  <string name="dashboard_notifications_message_incoming_2">from %1$s and %2$s</string>
  <string name="dashboard_notifications_message_incoming_others">from  %1$s, %2$s and others</string>
  <string name="dashboard_99_or_more">99+</string>
  <string name="authentication_contacting_title"></string>
  <string name="authentication_contacting_message">Contacting SoundCloud...</string>
  <string name="authentication_retrying_title">Communication error</string>
  <string name="authentication_retrying_message">There was a problem contacting Soundcloud for account access. Retrying.</string>
  <string name="authentication_failed_title">Communication error</string>
  <string name="facebook_authentication_failed_title">Hmm, we aren\'t able to connect to Facebook right now.</string>
  <string name="facebook_authentication_failed_message">Please try again shortly or log in using your SoundCloud username and password.</string>
  <string name="authentication_log_in">Log In</string>
  <string name="authentication_sign_up">Sign Up</string>
  <string name="authentication_log_in_with_facebook">Log In with Facebook</string>
  <string name="authentication_find_friends_on_facebook">\u0020\u0020\u0020\u0020Find Friends on Facebook</string>
  <string name="authentication_log_in_with_facebook_ssl_error">Error connecting to Facebook (SSL)</string>
  <string name="authentication_your_email_address">Your email address</string>
  <string name="authentication_your_password">Your password</string>
  <string name="authentication_I_forgot_my_password">I forgot my password</string>
  <string name="authentication_choose_a_password">Choose a password</string>
  <string name="authentication_repeat_your_password">Repeat your password</string>
  <string name="authentication_by_signing_in_I_agree_to_the">By signing up I agree to the Terms of Use of SoundCloud.</string>
  <string name="authentication_terms_of_use">Terms of Use</string>
  <string name="authentication_recover_password">Recover password</string>
  <string name="authentication_recover_password_msg">Enter your e-mail address and we\'ll send you a link that\'ll allow you to change your password. Problems? Contact support.</string>
  <string name="authentication_recover_password_success">Go check your mail! You\'ll receive an email with instructions on how to reset your password shortly</string>
  <string name="authentication_recover_password_failure">Password Recovery failed</string>
  <string name="authentication_recover_password_failure_reason">Password Recovery failed: %s</string>
  <string name="authentication_support">support</string>
  <string name="authentication_add_info_msg">Almost done. Now choose a username and add a photo to make your profile really yours.</string>
  <string name="authentication_add_info_username_hint">Your username</string>
  <string name="authentication_add_info_add_image_msg">Smile! This image will appear on your profile.</string>
  <string name="authentication_add_image">Add Image</string>
  <string name="authentication_add_info_error">Error adding info</string>
  <string name="authentication_add_info_error_reason">Error adding info: %s</string>
  <string name="authentication_error_invalid_email">Please enter a valid email.</string>
  <string name="authentication_error_incomplete_fields">Please fill in all fields.</string>
  <string name="authentication_error_password_mismatch">The password and confirmation have to match.</string>
  <string name="authentication_error_password_too_short">Your Password must have 4 or more characters.</string>
  <string name="authentication_support_email_chooser_text">Send email using...</string>
  <string name="authentication_support_email_address">support@soundcloud.com</string>
  <string name="authentication_support_email_subject">Login problems</string>
  <string name="authentication_support_email_message"></string>
  <string name="email_confirmation_thanks_later"><u>Thanks, I will confirm it later</u></string>
  <string name="authentication_recover_progress_message">Requesting password reset</string>
  <string name="authentication_signup_progress_message">Signing you up</string>
  <string name="authentication_signup_failure_title">Could not create user</string>
  <string name="authentication_signup_error_title">Oops!</string>
  <string name="authentication_signup_error_message">There seems to be a problem. Please try signing up at SoundCloud.com.</string>
  <string name="authentication_login_progress_message">Logging you in</string>
  <string name="authentication_login_error_password_message">We couldn\'t log you in. Sure you had the right email and password?</string>
  <string name="authentication_add_info_progress_message">Adding your info</string>
  <string name="authentication_error_title">Oops!</string>
  <string name="authentication_error_no_connection_title">Sure you\'re hooked up to the Internet?</string>
  <string name="facebook_authentication_error_no_connection_message">Please try again shortly or log in using your SoundCloud username and password.</string>
  <string name="authentication_error_no_connection_message">Please check your network settings.</string>
  <string name="suggested_users">Suggested Users</string>
  <string name="friends_from_facebook">Friends from Facebook</string>
  <string name="suggested_users_msg">Welcome! Thanks for joining SoundCloud. Feel free to add some new sounds from our Suggested Users to get started.</string>
  <string name="suggested_users_no_friends_msg">Whoop! You\'re a trendsetter. You\'re the first of your friends to join SoundCloud. Check out new sounds from our Suggested Users.</string>
  <string name="app_name">SoundCloud</string>
  <string name="client_id">xce4DwrNEmNzTIcuaAjkA</string>
  <string name="client_secret">GANQKmfSMpx9FUJ7G837OQZzeBEyv7Fj3ART1WvjQA</string>
  <string name="sandbox_client_id">0000000cRqnBaKamtp2ACbjvFdtJQx13</string>
  <string name="sandbox_client_secret">0000000pGDzQNAPHzBH6hBTHphl4Q1e9</string>
  <string name="image_load_error">Error loading image</string>
  <string name="player_not_streamable">This track is not streamable</string>
  <string name="player_error">There was a playback error</string>
  <string name="player_touch_bar">Tap here to make a timed comment</string>
  <string name="player_touch_bar_disabled">Comments disabled. Tap to enable.</string>
  <string name="bubble_new_instructions">Release to enter a timed comment at</string>
  <string name="cloud_player_service_label">Soundcloud: Playing</string>
  <string name="cloud_player_service_playing">Soundcloud Player Playing</string>
  <string name="cloud_player_service_paused">Soundcloud Player Paused</string>
  <string name="cloud_downloader_notification_ticker">Upload Started</string>
  <string name="cloud_downloader_event_title_track">Soundcloud: uploading track</string>
  <string name="cloud_downloader_event_title_artwork">Soundcloud: downloading artwork</string>
  <string name="cloud_downloader_event_title_waveform">Soundcloud: downloading waveform</string>
  <string name="cloud_downloader_event_title_avatar">Soundcloud: downloading user avatar</string>
  <string name="cloud_downloader_event_download_avatar">Downloading: %d\%%%</string>
  <string name="percentage_format">%d\%%%</string>
    <string name="timer_format" translatable="false"><xliff:g id="format">%02d:%02d</xliff:g></string>
  <string name="cloud_upload_clear_artwork">Hold to clear artwork</string>
  <string name="cloud_upload_not_yet_uploaded">not yet uploaded</string>
  <string name="cloud_upload_upload_failed">upload failed</string>
  <string name="cloud_upload_currently_uploading">Uploading, progress is in notifications</string>
  <string name="cloud_recorder_notification_ticker">Recording started</string>
  <string name="btn_ok">Ok</string>
  <string name="btn_cancel">Cancel</string>
  <string name="btn_login">Log In</string>
  <string name="btn_signup">Sign Up</string>
  <string name="btn_record_start">Start Recording</string>
  <string name="btn_playback_start">Start Playback</string>
  <string name="btn_start_upload">Start Upload</string>
  <string name="wifi_settings">Wi-Fi Settings</string>
  <string name="wifi_settings_summary">Edit your Wi-Fi settings. Use Wi-Fi for best
    performance.</string>
  <string name="about">About</string>
  <string name="about_summary">Copyright information</string>
  <string name="pref_page_size">Default page size</string>
  <string name="pref_page_size_desc">The default number of items returned in a list</string>
  <string name="pref_buffer_during_pause">Idle caching</string>
  <string name="pref_buffer_during_pause_desc">Continue caching audio even when player is paused.</string>
  <string name="pref_notifications">Dashboard Notifications</string>
  <string name="pref_notifications_description">Which dashboard updates would you like to receive?</string>
    <string name="pref_record_high_quality_type">High quality type</string>
  <string name="pref_record_high_quality_type_desc">Choose your preferred high quality recording type</string>
  <string name="pref_revoke_access">Log Out</string>
  <string name="pref_revoke_desc">Revoke current user access (requires re-authentication)</string>
  <string name="pref_clear_cache">Clear Cache</string>
  <string name="pref_clear_cache_desc">Clear the application cache to free up memory</string>
  <string name="pref_record_quality">Recording quality</string>
  <string name="pref_record_quality_desc">Choose your preferred recording quality</string>
    <string name="pref_change_log">Change Log</string>
    <string name="pref_change_log_desc">View application updates through this release</string>
  <string name="pref_dashboard_store_max">Dashboard maximum storage</string>
  <string name="pref_dashboard_store_max_desc">How many dashboard tracks do you want to store</string>
    <string name="pref_basic_settings">Basic settings</string>
    <string name="pref_connection_and_data">Connection and data</string>
    <string name="pref_app_details">App Details</string>
    <string name="pref_dev_settings">Dev settings</string>
</resources>