<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent" android:layout_height="fill_parent"
  android:background="@color/createBackground">
  <RelativeLayout android:padding="10dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
    <TextView android:layout_height="wrap_content" style="@style/txt_auth_title"
      android:layout_width="wrap_content" android:id="@+id/txt_title"
      android:layout_alignParentLeft="true" android:text="@string/authentication_recover_password"/>
    <EditText android:layout_height="wrap_content" android:id="@+id/txt_email_address"
            android:hint="@string/authentication_your_email_address" android:layout_below="@+id/txt_title"
            android:layout_alignLeft="@+id/txt_title" android:layout_width="fill_parent"
            android:imeOptions="actionDone" android:singleLine="true"
            style="@style/txt_auth_input" android:lines="1"/>
    <TextView android:layout_height="wrap_content" style="@style/txt_auth_msg"
      android:layout_width="wrap_content" android:id="@+id/txt_msg"
      android:layout_alignLeft="@id/txt_email_address"
      android:layout_alignRight="@id/txt_email_address" android:layout_below="@id/txt_email_address"
      android:text="@string/authentication_recover_password_msg"/>
    </RelativeLayout>
  <RelativeLayout android:layout_width="fill_parent"
                    android:layout_alignParentBottom="true" android:id="@+id/control_layout"
                    android:background="@color/playerControlAlphaBackground" android:layout_height="wrap_content">
        <LinearLayout android:paddingBottom="5dip"
                      android:orientation="horizontal"
                      android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:paddingTop="5dip" android:layout_marginTop="5dip">
            <Button android:id="@+id/btn_cancel" android:text="@string/btn_cancel"
                    android:layout_weight="1" android:layout_width="wrap_content"
                    android:layout_marginLeft="10dip" android:layout_marginRight="15dip"
                    android:layout_height="fill_parent"/>
            <Button android:id="@+id/btn_ok" android:text="@string/btn_ok"
                    android:layout_weight="1"
                    android:layout_width="wrap_content" android:layout_marginLeft="15dip"
                    android:layout_marginRight="10dip" android:layout_height="fill_parent"/>
        </LinearLayout>
        <View android:layout_width="fill_parent" android:layout_height="5dip"
              android:background="@drawable/drop_shadow_down"/>
    </RelativeLayout>

</RelativeLayout>
