<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
    <ImageView android:id="@+id/tour_background_image"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:scaleType="centerCrop"/>

    <View android:background="@color/tour_overlay"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"/>

    <RelativeLayout android:padding="10dip"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
        <TextView android:id="@+id/txt_title"
                  android:layout_height="wrap_content"
                  style="@style/txt_auth_title"
                  android:layout_width="wrap_content"
                  android:layout_alignParentLeft="true"
                  android:text="@string/authentication_sign_up"/>

        <com.soundcloud.android.view.ClearText android:id="@+id/txt_email_address"
                  android:layout_height="wrap_content"
                  android:hint="@string/authentication_your_email_address"
                  android:layout_below="@+id/txt_title"
                  android:layout_width="fill_parent"
                  android:imeOptions="actionNext"
                  android:singleLine="true"
                  android:lines="1"
                  android:inputType="textNoSuggestions|textEmailAddress"
                  style="@style/txt_auth_input"
                />

        <EditText android:id="@+id/txt_choose_a_password"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:inputType="textPassword"
                  android:singleLine="true"
                  android:hint="@string/authentication_choose_a_password"
                  android:layout_below="@id/txt_email_address"
                  android:imeOptions="actionNext" android:lines="1"
                  android:layout_alignLeft="@id/txt_email_address"
                  android:layout_alignRight="@id/txt_email_address"
                  style="@style/txt_auth_input"
                />

        <EditText android:id="@+id/txt_repeat_your_password"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:inputType="textPassword"
                  android:singleLine="true"
                  android:hint="@string/authentication_repeat_your_password"
                  android:layout_below="@id/txt_choose_a_password"
                  android:imeOptions="actionDone"
                  android:lines="1"
                  android:layout_alignLeft="@id/txt_email_address"
                  android:layout_alignRight="@id/txt_email_address"
                  style="@style/txt_auth_input"/>

        <TextView android:id="@+id/txt_msg"
                  android:layout_height="wrap_content"
                  style="@style/txt_auth_msg"
                  android:layout_width="wrap_content"
                  android:layout_alignLeft="@id/txt_email_address"
                  android:layout_alignRight="@id/txt_email_address"
                  android:layout_below="@+id/txt_repeat_your_password"
                  android:text="@string/authentication_by_signing_in_I_agree_to_the"/>
    </RelativeLayout>
    <View android:background="@color/authButtonSeparator"
          android:layout_height="1dp"
          android:layout_width="fill_parent"
          android:layout_above="@+id/btn_signup"/>
    <Button android:id="@id/btn_signup"
            android:layout_alignParentBottom="true"
            android:text="@string/btn_signup"
            android:background="@drawable/btn_auth_bg_states"
            android:textColor="@drawable/txt_btn_dark_states"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_bar_height"/>

</RelativeLayout>
