<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:panel="http://schemas.android.com/apk/res/org.miscwidgets"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:id="@+id/main_holder"
		android:orientation="vertical">
			<FrameLayout android:id="@+id/gauge_holder" android:layout_weight="1"
				android:paddingTop="30dip"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
			<RelativeLayout android:id="@+id/control_holder"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<Button 
				android:layout_margin="5dip"
				android:text="@string/btn_record_start" android:layout_width="fill_parent"
				android:layout_height="80dip"
				android:layout_alignParentTop="true"
				android:id="@+id/btn_record" android:enabled="true" />
				<Button 
				android:layout_margin="5dip"
				android:text="@string/btn_playback_start" android:layout_width="fill_parent"
				android:layout_height="80dip"
				android:layout_below="@id/btn_record"
				android:id="@+id/btn_playback" android:enabled="false" />
				<Button 
				android:layout_margin="5dip"
				android:text="@string/btn_start_upload" android:layout_width="fill_parent"
				android:layout_height="80dip"
				android:layout_below="@id/btn_playback"
				android:id="@+id/btn_upload" android:enabled="false" />
			</RelativeLayout>
	</LinearLayout>
</FrameLayout>