<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

    <RelativeLayout android:padding="10dip"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
        <TextView android:id="@+id/txt_title"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:layout_alignParentLeft="true"
                  android:text="@string/authentication_recover_password"
                  style="@style/txt_auth_title"
                />

        <EditText android:id="@+id/txt_email_address"
                  android:layout_height="wrap_content"
                  android:hint="@string/authentication_your_email_address"
                  android:layout_below="@+id/txt_title"
                  android:layout_alignLeft="@+id/txt_title"
                  android:layout_width="fill_parent"
                  android:imeOptions="actionDone"
                  android:singleLine="true"
                  android:lines="1"
                  android:inputType="textNoSuggestions"
                  style="@style/txt_auth_input"
                />

        <TextView android:id="@+id/txt_msg"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:layout_alignLeft="@id/txt_email_address"
                  android:layout_alignRight="@id/txt_email_address"
                  android:layout_below="@id/txt_email_address"
                  android:text="@string/authentication_recover_password_msg"
                  style="@style/txt_auth_msg"
                />
    </RelativeLayout>
    <Button android:id="@+id/btn_ok"
                    android:layout_alignParentBottom="true"
                    android:text="@android:string/ok"
                    android:background="@drawable/btn_auth_bg_states"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/button_bar_height"/>
</RelativeLayout>
